Update dockerfile regarding new feature: TLS support

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -10,16 +10,31 @@ LABEL Author="PyKiki" \
 ENV PYTHONPATH "$(find '/usr/lib/' -regex '.*python[0-9].*/site-packages')"
 
 RUN apk update && apk upgrade
-RUN apk add python3 curl git shadow ffmpeg
+RUN apk add python3 ffmpeg
+
+RUN apk add --virtual .build-deps curl git shadow \
+    ca-certificates \
+    file gnupg tar \
+    coreutils \
+    make gcc g++ musl-dev \
+    python3-dev py3-cffi libffi-dev \
+    openssl-dev \
+    linux-headers \
+    expat-dev \
+    dpkg-dev dpkg \
+    libc-dev \
+    bzip2-dev \
+    zlib-dev
+
 RUN useradd flask -m -d /home/flask -s /bin/sh
 RUN pip3 install --upgrade pip
 
 WORKDIR /home/flask
 RUN su - flask -c 'git clone https://github.com/pykiki/music_flask.git'
 WORKDIR /home/flask/music_flask/
-
 RUN python3 setup.py install
-RUN apk del curl git shadow
+
+RUN apk del .build-deps
 
 STOPSIGNAL SIGTERM
 
